force-app/main/default/objects/Payment_Method__c/Payment_Method__c.object-meta.xml
<CustomObject>
    <label>ISBAM Payment Method</label>
    <nameField>
        <displayFormat>PM-{00}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISBAM Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>