force-app/main/default/objects/Payment_Method__c/fields/Last_4_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Account_Number__c</fullName>
    <label>Last 4 Account Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>