force-app/main/default/objects/Payment_Method__c/fields/Masked_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Masked_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>