force-app/main/default/objects/Payment_Method__c/fields/Name_On_Card__c.field-meta.xml
<CustomField>
    <fullName>Name_On_Card__c</fullName>
    <label>Name On Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>