force-app/main/default/objects/Payment_Method__c/fields/Payment_Method_Token__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Token__c</fullName>
    <label>Payment Method Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>