force-app/main/default/objects/Payment_Method__c/fields/Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Processor</label>
    <referenceTo>AcctSeed__Payment_Processor__c</referenceTo>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>